--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -813,6 +813,18 @@
    "source": [
     "#### Passengers in Fisrt Class has the better survival chance"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Testing Testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
